# pymotorcad

./: .gitignore  .pre-commit-config.yaml  AUTHORS  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  README.rst  codecov.yml  exclude_lines.txt  geom_json_example.json  ignore_words.txt  index.html  pyproject.toml  robots.txt  setup.py  shreya_custom_loss_test.py  sitemap.xml  tox.ini  versions.json
.github/: CODEOWNERS  dependabot.yml  labeler.yml  labels.yml
.github/workflows/: ci_cd.yml  label.yml  nightly-motorcad-check.yml  reset_runner.yml
doc/: .vale.ini  Makefile  make.bat
doc/source/: conf.py  contributing.rst  index.rst
doc/source/_static/: custom.css
doc/source/getting_started/: index.rst  running_motorcad.rst
examples/: MCAD_basics_EMag.py  Motor-CAD Python Script Lab.py  Motor-CAD Python Script Thermal.py  Motor_CAD_ECE_export.py  README.txt  ece_export_for_twinbuilder.py  emag_basics.py  lab_basics.py  thermal_basics.py
examples/adaptive/: README.txt  adaptive_templates_tutorial_example_1.py  adaptive_templates_tutorial_example_2.py  creating_debugging_adaptive_scripts.py  creating_modifying_adaptive_scripts.py
examples/adaptive_library/: AsymmetricSPM.py  AsymmetricSpokePM.py  AxialFluxBPMRoundMagnets.py  BPMModifiedSlotOpening.py  BPMTriangularRotorNotches.py  BPMTriangularStatorNotches.py  BezierCurveRotorPockets.py  ConceptEVexport.py  CornerRounding.py  CurvedRotor.py  DXFImport.py  DXFImport_python.py  GeometryImportFromPoints.py  IPMRotorPocketAdjustment.py  IPMRoundRotorLamMagnets.py  IPMTriangularRotorDucts.py  OblongStatorDuct.py  OvalRotorDucts.py  README.txt  RotorTrapezoidRotorDuct_v1.py  RotorTrapezoidRotorDuct_v2.py  RotorTrapezoidRotorDuct_v3.py  RoundParallelSlotBttm.py  SPMCustomMagnetAngles.py  SquareRotorDucts.py  SquareStatorIPM.py  TrapezoidalDuct.py  TrapezoidalSlotWedge.py  TriangularSlotWedge.py  UShapeSYNCRELCurvedFluxBarriers.py  UpdateMaterialMesh.py
examples/adaptive_tutorials/: README.txt  adaptive_templates_tutorial_example_1.py  adaptive_templates_tutorial_example_2.py  creating_modifying_adaptive_scripts.py
examples/advanced/: README.txt  RotorPocketWaterJacketCooling.py  force_extraction.py  multiprocessing_simple.py  oil_cooling_calibration.py  running_parallel_instances.py  stress_postprocessing.py  stress_postprocessing_fatigue.py  test_data.csv  thermal_duty_cycle_custom_variables.py
examples/basics/: Demo_example.py  README.txt  emag_basics.py  lab_basics.py  scripting_tab_demo.py  thermal_basics.py
examples/internal_scripting/: README.txt  SCC_EMF_SYNC_iterative.py  emag.py  mechanical_force.py  mechanical_stress.py  thermal_steady_state.py  thermal_transient.py
examples/links/: Conceptev_v2.py  README.txt  ece_config.json  ece_export_for_twinbuilder.py  thermal_twinbuilder.py  thermal_twinbuilder.py.disabled
requirements/: requirements_doc.txt
samples/: README.txt
samples/General/: ParameterSweepSync.py
samples/adaptive_template/: AdaptiveSlotBaseInsulation.py  ClosedSlot.py  README.txt  RotorPocketFluidDucts.py  TaperedBar.py
samples/general/: BridgeStressSampling.py  MagnetPocketPeakStress.py  MotionForceExport.py  ParameterSweepSync.py  README.txt  duty_cycle_custom_variables.json  thermal_duty_cycle_inputs.py
testing/: ECE_config.json  MCAD_basics_EMag.py  Motor-CAD Python Script Lab.py  Motor-CAd Python Script Thermal.py  Motor_CAD_ECE_export.py
tests/: RPC_Test_Common.py  __init__.py  conftest.py  setup_test.py  test_MotorCAD_Methods.py  test_UI.py  test_calculations.py  test_ellipse_geometry.py  test_fea_geometry.py  test_files.py  test_general.py  test_geometry.py  test_geometry_drawing.py  test_geometry_extrusion.py  test_geometry_fitting.py  test_geometry_new.py  test_geometry_shapes.py  test_geometry_tree.py  test_graphs.py  test_internal_scripting.py  test_lab.py  test_library.py  test_materials.py  test_metadata.py  test_rpc_client_core.py  test_thermal.py  test_variables.py  test_winding.py
tests/test_files/: Arnold_Neodymium.mdb  IM_test_file.mot  ReducedNodes.rnm  SRM_test_file.mot  TorqueSpeed_result_1_5.mes  adaptive_template_testing_lam_rotor_region.mot  adaptive_template_testing_solid_rotor_region.mot  adaptive_templates_script.py  base_test_file.mot  dummy_materials.mdb  dxf_import.dxf  internal_script.py
version/: index.html
version/0.1/: .buildinfo  contributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/0.2/: .buildinfo  contributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/0.3/: .buildinfo  announcement.html  contributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/0.4/: .buildinfo  contributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  sg_execution_times.html
version/0.5/: .buildinfo  contributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  sg_execution_times.html
version/0.6/: contributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  sg_execution_times.html
version/0.7/: contributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  sg_execution_times.html
version/0.8/: contributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  sg_execution_times.html
version/dev/: .buildinfo  contributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  sg_execution_times.html
version/stable/: contributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  sg_execution_times.html
(+7481 files in other folders)
