[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name="ansys-motorcad-core"
dynamic = ["version"]
description = "Pythonic interface to Ansys Motor-CAD."
readme = "README.rst"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "Ansys, Inc.", email = "pyansys.core@ansys.com"},
]
maintainers = [
    {name = "PyAnsys developers", email = "pyansys.core@ansys.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "psutil >= 5.9.0",
    "requests >= 2.27.1",
    "packaging >= 21.3",
]

[project.optional-dependencies]
tests = [
    "pytest==7.3.1",
    "pytest-cov==4.0.0",
]
doc = [
    "Sphinx==5.3.0",
    "numpydoc==1.5.0",
    "ansys-sphinx-theme==0.9.7",
    "sphinx-copybutton==0.5.2",
    "sphinx-gallery==0.12.2",
    "matplotlib",
    "scipy",
    "pypandoc==1.11"
]

[project.urls]
Source = "https://github.com/pyansys/pymotorcad"
Documentation = "https://motorcad.docs.pyansys.com/"
Tracker = "https://github.com/pyansys/pymotorcad/issues"

[tool.flit.module]
name = "ansys.motorcad.core"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys.motorcad"]

[tool.coverage.report]
show_missing = true